--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-intl": "^4.3.5",
     "pg": "^8.16.3",
     "prisma": "^6.15.0",
     "react": "19.1.0",
